# gw192a-thermal

./: .gitignore  README.md  netlify.toml
android-bridge/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android-bridge/app/: build.gradle.kts
android-bridge/app/src/main/: AndroidManifest.xml
android-bridge/app/src/main/res/layout/: activity_main.xml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/api/: routes_auth.py  routes_export.py  routes_patients.py  routes_sessions.py  ws.py
backend/app/core/: security.py
backend/app/db/: database.py  models.py
backend/app/thermal/: __init__.py  alerts.py  decoder.py  palettes.py  render.py  roi.py  statistics.py
backend/tests/: test_thermal.py
docs/: 01-gw192a-research.md  02-architecture.md  03-platform-strategies.md  04-deployment.md  05-testing.md  06-risks.md
frontend/: next-env.d.ts  next.config.js  package.json  tailwind.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AlertBanner.tsx  FusionControls.tsx  LiveMonitor.tsx  ModeSwitch.tsx  NavBar.tsx  PaletteSelector.tsx  StatsPanel.tsx  ThermalCanvas.tsx
frontend/src/lib/: alerts.ts  api.ts  camera.ts  demo.ts  thermal.ts  webusb.ts  ws.ts
gateway/: README.md  gw192a_gateway.py  requirements.txt
validate/: validate_core.py
(+6 files in other folders)
