[project]
name = "thermobaby-backend"
version = "0.1.0"
description = "FastAPI backend for the GW192A infant thermal monitoring platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
